2017-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/configure,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/supported-devices.ac:
	  Reduce pic device support warning timeout.
	* support/regression/tests/gcc-torture-execute-920612-1.c:
	  Disable a host test that fails for GCC 7.2.

2017-10-27 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac,
	  sim/ucsim/cmd.src/cmdutil.cc,
	  sim/ucsim/configure,
	  sim/ucsim/configure.ac,
	  sim/ucsim/utils.cc,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Do not work around missing C99 support.
	* support/regression/Makefile.in:
	  Reduce make overhead in regression testing from quadratic to linear in the number of tests.
	* sim/ucsim/app.cc:
	  Speed up simulator command handling for faster regression testing.

2017-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  support/regression/tests/bug-2370.c:
	  Fix various --reserve-regs-iy issues, including bug #2370 and most of bug #2674.

2017-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen:
	  Fix a --reserve-regs-iy bug in 32/64-bit comparisons.
	* src/stm8/peeph.def,
	  src/stm8/gen.c:
	  Minor improvements for stm8.

2017-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  __z88dk_fastcall function pointer support for --reserve-regs-iy.

2017-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix broken references.
	* src/z80/gen.c:
	  Fix various --reserve-regs-iy issues, including bugs #2400, #2278, #2380.

2017-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Debug info for partially spilt variables.
	* doc/sdccman.lyx,
	  doc/Makefile.in:
	  Fix SDCC version in manual title for out-of-tree build.
	* src/SDCCast.c,
	  support/regression/tests/bug-2632.c:
	  Fix bug #2632.

2017-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c: